# OpenCVTrafficSim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: Graphics.cpp  Graphics.h  Intersection.cpp  Intersection.h  Street.cpp  Street.h  TrafficLight.cpp  TrafficLight.h  TrafficObject.cpp  TrafficObject.h  TrafficSimulator.cpp  Vehicle.cpp  Vehicle.h
